--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -138,27 +138,28 @@ Recup100Sonora= function(...) return(67)
 
 ```{r}
 CasosSon = CasosSonora()
-valueBox(CasosSon, icon = "fa-certificate", color = "#01787E")
+valueBox(comma(CasosSon), icon = "fa-certificate", color = "#01787E")
 ```
 
 ### **Decesos acumulados**
 
 ```{r}
 DecesosSon = DecesosSonora()
-valueBox(DecesosSon, icon= "fa-plus", color = "#993366")
+valueBox(comma(DecesosSon), icon= "fa-plus", color = "#993366")
 ```
 
 ### **Hospitalizados**
 ```{r}
 Hospitalizados = HospSonora()
-valueBox(  Hospitalizados, icon = "fa-hospital-o", color = "#F79646")
+valueBox(  comma(Hospitalizados), icon = "fa-hospital-o", color = "#F79646")
 ```
 
 ### **Recuperados**
 ```{r}
 Recuperados = RecuperadosSonora()
-valueBox( Recuperados, icon = "fa-arrow-circle-up", color = "#4F81BD")
+valueBox(comma(Recuperados), icon = "fa-arrow-circle-up", color = "#4F81BD")
 ```
+
 
 
 Row {data-height=650}
@@ -357,7 +358,7 @@ Casos_map_ani <- girafe(code = print(Mapa_casos),
 Casos_map_ani 
 ```
 
-### **Casos acumulados al 25 de julio de 2020**
+### **Casos acumulados al 29 de julio de 2020**
 
 ```{r, include=FALSE}
 Indicadoresord1 <- arrange(Indicadores,CASOS, desc(MUNICIPIO))
@@ -429,7 +430,7 @@ Casos_ult_ani <- girafe(code = {print(Mapa_ult)},
 Casos_ult_ani 
 ```
 
-### **Días desde el último caso confirmado (corte al 25/07/2020)**  {data-width=500}
+### **Días desde el último caso confirmado (corte al 29/07/2020)**  {data-width=500}
 
 ```{r, include=FALSE}
 casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
@@ -503,7 +504,7 @@ Decesos_map_ani <- girafe(code = print(Mapa_decesos),
 Decesos_map_ani 
 ```
 
-### **Decesos acumulados al 25 de julio de 2020** {data-width=500}
+### **Decesos acumulados al 29 de julio de 2020** {data-width=500}
 
 ```{r, include=FALSE}
 Indicadoresord2 <- arrange(Indicadores2,DECESOS, desc(MUNICIPIO))
@@ -540,7 +541,7 @@ Row {.tabset}
 ### **Casos semanales**
 ```{r}
 Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana != 30)
+Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana!=31)
 Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `CASOS SEMANALES`, fill = `CASOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#58BCBC", high = "black") + 
@@ -554,14 +555,14 @@ Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajem
           axis.title = element_text(family = "Lato", size = 15),
           panel.background = element_rect(fill = "gray95"), 
           legend.position = "none") +labs(y = NULL, x = NULL, title  = NULL) + 
-  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none",  panel.margin.y = unit(0, "lines"), panel.margin.x = unit(0,"lines"))
+  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none")
 ggplotly(Casos_Semanales, tooltip = c("y","label", "x"))
 ```
 
 ### **Decesos semanales**
 ```{r}
 Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana != 30)
+Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana!=31)
 Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `DECESOS SEMANALES`, fill = `DECESOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#993366", high = "black") +
@@ -575,7 +576,7 @@ Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "C
           axis.title = element_text(family = "Lato", size = 15),
           panel.background = element_rect(fill = "gray95"), 
           legend.position = "none") +labs(y = NULL, x = NULL, title  = NULL) + 
-  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none",  panel.margin.y = unit(0, "lines"), panel.margin.x = unit(0,"lines"))
+  theme(panel.grid.major = element_line(colour = "white"), panel.grid.minor = element_line(colour = "white"),                                   panel.background = element_rect(fill = "gray95"),legend.position = "none")
 ggplotly(Decesos_Semanales, tooltip = c("y", "label", "x"))
 ```
 
@@ -629,7 +630,7 @@ ggplotly(Decesos_Todos)
 
 Indicadores
 =====================================
-**Al 25 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
+**Al 29 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
 CDSELECT<-select(Indicadores, "MUNICIPIO","POBLACION", "CASOS","CASOS NUEVOS","INCIDENCIA", "DECESOS","DECESOS NUEVOS","MORTALIDAD", "LETALIDAD")
 CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS NUEVOS` = coalesce(`DECESOS NUEVOS`,0L), `CASOS NUEVOS` = coalesce(`CASOS NUEVOS`,0L), MORTALIDAD = coalesce(MORTALIDAD, 0), LETALIDAD = coalesce(LETALIDAD, 0))
