--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -56,8 +56,8 @@ library(zoo)
 ```
 
 ```{r, include=FALSE}
-POBMUN <- read_csv("POBMUN.csv", col_types = cols(CVEGEO = col_character()))
-Sonora.DF <- read_csv("ST_SonoraInformesCOVID.csv", 
+POBMUN <- read_csv("Bases/POBMUN.csv", col_types = cols(CVEGEO = col_character()))
+Sonora.DF <- read_csv("Bases/ST_SonoraInformesCOVID.csv", 
     col_types = cols(Fecha = col_date(format = "%d/%m/%Y")))
 Sonora.DF <- mutate(Sonora.DF, Casos.diarios= Confirmados - lag(Confirmados, default = Confirmados[1]))
 Sonora.DF <- mutate(Sonora.DF, Decesos.diarios= Decesos - lag(Decesos, default = Confirmados[1]))
@@ -74,7 +74,7 @@ Sonora.dia <- filter(Sonora.DF,Fecha==Sys.Date())
 ```
 
 ```{r, include=FALSE}
-Casos <- read_csv("Casosdiarios.csv", 
+Casos <- read_csv("Bases/Casosdiarios.csv", 
     col_types = cols(CASOS = col_integer(), 
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
@@ -86,7 +86,7 @@ casosacumdia2 <- mutate(casosacumdiaorder,id=CVEGEO)
 
 
 ```{r, include=FALSE}
-Decesos <- read_csv("Decesosdiarios.csv", 
+Decesos <- read_csv("Bases/Decesosdiarios.csv", 
      col_types = cols(DECESOS = col_integer(), 
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
@@ -358,7 +358,7 @@ Casos_map_ani <- girafe(code = print(Mapa_casos),
 Casos_map_ani 
 ```
 
-### **Casos acumulados al 29 de julio de 2020**
+### **Casos acumulados al 02 de agosto de 2020**
 
 ```{r, include=FALSE}
 Indicadoresord1 <- arrange(Indicadores,CASOS, desc(MUNICIPIO))
@@ -430,7 +430,7 @@ Casos_ult_ani <- girafe(code = {print(Mapa_ult)},
 Casos_ult_ani 
 ```
 
-### **Días desde el último caso confirmado (corte al 29/07/2020)**  {data-width=500}
+### **Días desde el último caso confirmado (corte al 02/08/2020)**  {data-width=500}
 
 ```{r, include=FALSE}
 casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
@@ -504,7 +504,7 @@ Decesos_map_ani <- girafe(code = print(Mapa_decesos),
 Decesos_map_ani 
 ```
 
-### **Decesos acumulados al 29 de julio de 2020** {data-width=500}
+### **Decesos acumulados al 02 de agosto de 2020** {data-width=500}
 
 ```{r, include=FALSE}
 Indicadoresord2 <- arrange(Indicadores2,DECESOS, desc(MUNICIPIO))
@@ -541,7 +541,7 @@ Row {.tabset}
 ### **Casos semanales**
 ```{r}
 Casossemana <- Casos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS)) %>% filter(Semana!=31)
+Casossem <- group_by(Casossemana, MUNICIPIO, Reporte, Semana) %>% summarise('CASOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(CASOS))
 Casos_Semanales <- ggplot(subset(Casossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `CASOS SEMANALES`, fill = `CASOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#58BCBC", high = "black") + 
@@ -562,7 +562,7 @@ ggplotly(Casos_Semanales, tooltip = c("y","label", "x"))
 ### **Decesos semanales**
 ```{r}
 Decesossemana <- Decesos %>% mutate(Semana = isoweek(Fecha)) %>% group_by(Semana) %>% mutate (Reporte=max(as.Date(Fecha))) %>% ungroup()
-Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS)) %>% filter(Semana!=31)
+Decesossem <- group_by(Decesossemana, MUNICIPIO, Reporte, Semana) %>% summarise('DECESOS SEMANALES' = sum(NUEVOS), ACUMULADOS=max(DECESOS))
 Decesos_Semanales <- ggplot(subset(Decesossem, MUNICIPIO %in% c("Hermosillo", "Cajeme", "Nogales", "San Luis Río Colorado", "Navojoa", "Guaymas", "Caborca", "Agua Prieta", "Huatabampo", "Puerto Peñasco", "Etchojoa", "Empalme"))) +
     geom_col(mapping = aes(x = Reporte, y = `DECESOS SEMANALES`, fill = `DECESOS SEMANALES`, label= ACUMULADOS)) +
     scale_fill_gradient(low = "#993366", high = "black") +
@@ -586,7 +586,7 @@ Casos$NUEVOS[Casos$NUEVOS == 0] <- NA
 Casos_Todos <- ggplot(data = Casos) +
       geom_tile(mapping = aes(x = Fecha, y = MUNICIPIO, fill = NUEVOS, text = paste(
                "ACUMULADOS: ", CASOS, "\n")), color = "white") +
-        scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,310), breaks = c(1, 50, 100, 150, 200, 250, 300)) +
+        scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,400), breaks = c(1, 100, 200, 300, 400)) +
     scale_x_date(date_breaks = "weeks" , date_labels = "%d-%m") +
      theme_minimal() +
     theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
@@ -630,7 +630,7 @@ ggplotly(Decesos_Todos)
 
 Indicadores
 =====================================
-**Al 29 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
+**Al 02 de agosto de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
 CDSELECT<-select(Indicadores, "MUNICIPIO","POBLACION", "CASOS","CASOS NUEVOS","INCIDENCIA", "DECESOS","DECESOS NUEVOS","MORTALIDAD", "LETALIDAD")
 CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS NUEVOS` = coalesce(`DECESOS NUEVOS`,0L), `CASOS NUEVOS` = coalesce(`CASOS NUEVOS`,0L), MORTALIDAD = coalesce(MORTALIDAD, 0), LETALIDAD = coalesce(LETALIDAD, 0))
@@ -699,7 +699,7 @@ reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS"
   defaultColDef = colDef(footerStyle = list(fontWeight = "bold")))
 ```
 ```{r, include=FALSE}
-write.csv(CDSELECT1,'Indicadores-Municipios-Sonora.csv')
+write.csv(CDSELECT1,'ResultadoCSV/Indicadores-Municipios-Sonora.csv')
 ```
 
 Fuentes
